* fix navigator title regex 
* fix of listing only directories in dir scope
* adding navigation to editor
* updated bespin to 0.8.0

0.0.10
* fix of saving edited file
* add create new feature
* menu items highlighting
* in aggregate report also displaying scenarios
* fix colspan spelling
* fix correct paths to assests
* fix assent handling (content_type)
* graphic and design be Rafał Bromirski from Selleo
  http://cs3b-cucumber-fm.s3.amazonaws.com/0.0.10.editor.jpg
  http://cs3b-cucumber-fm.s3.amazonaws.com/0.0.10.dasboard.jpg

0.0.9
* using bespin as editor
  http://cs3b-cucumber-fm.s3.amazonaws.com/0.0.9.editor.jpg
* internal assets serving
* bugfix: wrong method name in cfm

0.0.8
* git (with remotes) support
* simply editor
  http://cs3b-cucumber-fm.s3.amazonaws.com/0.0.8.editor.jpg
* ugly styling in dashboard
  http://cs3b-cucumber-fm.s3.amazonaws.com/0.0.8.dashboard.jpg
* bugfix: spelling of collspan -> colspan

0.0.7
* listing scenarios in dashboard
* aggregator for based on two dimensions
> Viewing dashboard
  http://cs3b-cucumber-fm.s3.amazonaws.com/0.0.7.dashboard.jpg

0.0.6
* basic tag filtering
* keeping user setting in cookie

0.0.5
Business Overview - dashboard
> Viewing dashobard
  http://cs3b-cucumber-fm.s3.amazonaws.com/0.0.5.dashboard.jpg
* scheduling features
* features specyfication

0.0.4
* core development