@@ -114,7 +114,7 @@ ul, ul li, p, input, textarea, select, label
     height: 43px;
     background: url(/documentation/assets/images//layout/frame_head_actions.png) repeat-x top left #83969f;
     float: right;
-    -moz-border-radius-topright: 5px;    
+    -moz-border-radius-topright: 5px;
 }
 
 .frame .head .actions h2
@@ -147,7 +147,7 @@ ul, ul li, p, input, textarea, select, label
     width: 790px;
     float: left;
     background: #fff;
-    -moz-border-radius-bottomleft: 5px;    
+    -moz-border-radius-bottomleft: 5px;
 }
 
 .frame .content .right
@@ -163,7 +163,7 @@ ul, ul li, p, input, textarea, select, label
     text-shadow: 1px 1px 0px #5c5c5c;
     padding: 13px 14px 12px;
     color: #fff;
-    font-weight: 700;    
+    font-weight: 700;
     background: url(/documentation/assets/images//layout/frame_head_actions.png) repeat-x top left #83969f;
 }
 
@@ -254,7 +254,7 @@ table tbody tr.feature_header:first-child td
     text-shadow: 1px 1px 0px #008dcf;
     -moz-box-shadow: 0px 1px 0px #fff;
     -moz-box-shadow: 0px -1px 0px #0094d9;
-    background: #00aeff;    
+    background: #00aeff;
 }
 
 .m_magenta
@@ -302,7 +302,7 @@ table tbody tr.feature_header:first-child td
 
 .form_fields li
 {
-    padding-bottom: 5px;    
+    padding-bottom: 5px;
 }
 
 .form_fields li label
@@ -357,7 +357,7 @@ table tbody tr.feature_header:first-child td
 .section_view .form_fields input,
 .section_view .form_fields textarea
 {
-    width: 172px;    
+    width: 172px;
 }
 
 input, textarea, select
@@ -400,6 +400,19 @@ input, textarea, select
     height: 600px;
     width: 100%;
     overflow: hidden;
+}
+
+
+.error  {
+    background:none repeat scroll 0 0 #FBE3E4;
+    border-color:#FBC2C4;
+    color:#8A1F11;
+}
+
+.error, .notice, .success {
+    border:2px solid #DDDDDD;
+    margin-bottom:1em;
+    padding:0.8em;
 }
 
 
